Source/WebCore/accessibility/AXObjectCache.h
@@ -474,6 +474,7 @@ private:
     Element* currentModalNode();
     bool isNodeVisible(Node*) const;
     void handleModalChange(Element&);
+    bool modalElementHasAccessibleContent(Element&);
 
     Document& m_document;
     const std::optional<PageIdentifier> m_pageID; // constant for object's lifetime.
